--- a/bookshelf.html
+++ b/bookshelf.html
@@ -22,4 +22,14 @@ description: "Lo último que he leído"
 {% endif %}
 {% endfor %}
 </ol>
+
+<h2>2020</h2>
+<ol class="book-list">
+{% for book in site.data.books %}
+{% if book.completed == '2020' %}
+      <li><a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}</li>
+{% endif %}
+{% endfor %}
+</ol>
+
 </div>
