--- a/_pages/log.html
+++ b/_pages/log.html
@@ -37,7 +37,7 @@ description: "Recientemente..."
       <span class="logtext">{{ log.text }}</span>
       {% comment %}
       {% if log.timestamp %}
-      <span class="timestamp">-->[{{ /**log.timestamp**/ }}]</span>
+      <span class="timestamp">-->[{{ log.timestamp }}]</span>
       {% endif %}
       {% endcomment %}
 
