--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -6,7 +6,9 @@ description: "Lo último que he leído"
 <div class="book-list">
 {% for book in site.data.books %}
 {% if book.completed == 'reading' %}
-    <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
+    <b>
+      <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
+    </b>
     {% if book.link %}
       <a href="{{ book.link }}">→</a>
     {% endif %}
@@ -14,6 +16,12 @@ description: "Lo último que he leído"
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
       <div class="w3-container w3-round w3-blue" style="width: {{ book.progress }}">{{ book.progress }}</div>
     </div>
+    {% endif %}
+    {% if book.synopsis %}
+    {% if book.cover %}
+      <a href="{{ book.link }}"><img src="assets/images/books/{{book.cover}}" class="book-cover"/></a>
+    {% endif %}
+    <p class="book-synopsis">{{ book.synopsis }}</p>
     {% endif %}
 {% endif %}
 {% endfor %}
