--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -6,12 +6,13 @@ description: "Lo último que he leído"
 <div class="book-list">
 {% for book in site.data.books %}
 {% if book.completed == 'reading' %}
-    <b>
+    <h2 class="year">
       <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
-    </b>
     {% if book.link %}
       <a href="{{ book.link }}">→</a>
     {% endif %}
+    </h2>
+
     {% if book.progress %}
     <div class="w3-light-grey w3-round w3-small w3-center w3-border readprogress">
       <div class="w3-container w3-round w3-blue" style="width: {{ book.progress }}">{{ book.progress }}</div>
