--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -7,7 +7,10 @@ description: "Lo último que he leído"
 {% for book in site.data.books %}
 {% if book.completed == 'reading' %}
     <h2 class="year">
-      <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
+      <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}">
+        <span class="book-title">«{{ book.title }}»</span>
+      </a><br/>
+    <span class="book-author">{{ book.author}}</span>
     {% if book.link %}
       <a href="{{ book.link }}">→</a>
     {% endif %}
@@ -22,8 +25,9 @@ description: "Lo último que he leído"
     {% if book.cover %}
       <a href="{{ book.link }}"><img src="assets/images/books/{{book.cover}}" class="book-cover"/></a>
     {% endif %}
-    <p class="book-synopsis">{{ book.synopsis }}</p>
+    <p class="book-synopsis">&laquo;{{ book.synopsis }}&raquo;</p>
     {% endif %}
+    <hr/>
 {% endif %}
 {% endfor %}
 </div>
