--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -55,9 +55,14 @@ description: "Lo último que he leído"
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
         {% if book.rating %}
+        <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+          </span>
         {% endif %}
       </li>
 {% endif %}
@@ -71,9 +76,14 @@ description: "Lo último que he leído"
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
         {% if book.rating %}
+        <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+        </span>
         {% endif %}
       </li>
 {% endif %}
@@ -87,9 +97,14 @@ description: "Lo último que he leído"
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
         {% if book.rating %}
+        <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+        </span>
         {% endif %}
       </li>
 {% endif %}
@@ -103,9 +118,14 @@ description: "Lo último que he leído"
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
         {% if book.rating %}
+        <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+        </span>
         {% endif %}
       </li>
 {% endif %}
@@ -119,9 +139,14 @@ description: "Lo último que he leído"
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
         {% if book.rating %}
+        <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+        </span>
         {% endif %}
       </li>
 {% endif %}
@@ -134,10 +159,15 @@ description: "Lo último que he leído"
 {% if book.completed == '2017' %}
       <li>
         <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
-        {% if book.rating %}
+          {% if book.rating %}
+          <span class="star-rating">
           {% for y in (1..book.rating) %}
-          ⭐️
+          ★
           {% endfor %}
+          {% for z in (book.rating..4) %}
+          ☆
+          {% endfor %}
+        </span>
         {% endif %}
       </li>
 {% endif %}
