Book data updated

--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -44,6 +44,7 @@ description: "Rincón de lectura"
 {% endif %}
 {% endfor %}
 </ol>
+</div>
 
 
 <div class="w-100">
@@ -69,7 +70,9 @@ description: "Rincón de lectura"
 {% endif %}
 {% endfor %}
 </ol>
+</div>
 
+<div class="w-100">
 
 {% assign y_start = 2022 %}
 {% assign y_end = 2017 %}
