--- a/_pages/bookshelf.html
+++ b/_pages/bookshelf.html
@@ -74,9 +74,11 @@ description: "Rincón de lectura"
 
 <div class="w-100">
 
-{% assign y_start = 2022 %}
+{% assign y_start = 2021 %}
 {% assign y_end = 2017 %}
-{% for n in (1..5) %}
+
+{% assign years = {{y_start}} | minus: {{y_end}} %}
+{% for n in (0..{{years}}) %}
 {% assign ty = y_start | minus: {{n}} %}
 <h2 class="year">{{ ty }}</h2>
 <ol class="book-list">
@@ -100,4 +102,29 @@ description: "Rincón de lectura"
 {% endfor %}
 </ol>
 {% endfor %}
+
+<h2 class="year">Lecturas anteriores a 2017<sup>*</sup></h2>
+<ol class="book-list">
+{% for book in site.data.books %}
+{% if book.completed == nil %}
+      <li>
+        {% if book.rating %}
+        <span class="star-rating">
+        {% for y in (1..book.rating) %}
+        ★
+        {% endfor %}
+        {% for z in (book.rating..4) %}
+        ☆
+        {% endfor %}
+        &nbsp;
+        </span>
+        {% endif %}
+        <a alt="{{ book.description }}" class="book-title" href="{{ book.link }}"><i>{{ book.title }}</i></a> de {{ book.author}}
+      </li>
+{% endif %}
+{% endfor %}
+    <li>···</li>
+</ol>
+<p>* Listado en construcción.</p>
+
 </div>
